Scanning site optimized

--- a/Public/Scanning.html
+++ b/Public/Scanning.html
@@ -17,8 +17,8 @@
                 <button id="scanButton" onclick="scanButtonFunction()">Scannen</button>
             </div>
             <div id="checkArea">
-                <button id="buttonOK" onclick="buttonFunctionOK()">OK</button>
-                <button id="buttonNOK" onclick="buttonFunctionNOK()">NOK</button>
+                <button id="buttonOK" onclick="visualInspectionScanning(true)">OK</button>
+                <button id="buttonNOK" onclick="visualInspectionScanning(false)">NOK</button>
             </div>
             <div id="processBox">
                 <button id="buttonPersonalizatonAndShipping" onclick="toPersonalizationAndShipping()">Personalization & Shipping</button>
