--- a/Public/personalizationAndShipping.html
+++ b/Public/personalizationAndShipping.html
@@ -8,11 +8,13 @@
 <html>
     <body>
         <div id="container">
+            <p id="productInformation"></p>
             <div id="divPersonalization"></div>
             <div id="divShipping">
                 <h2>Shipping</h2>
                 <button id="buttonShipping" onclick="getShippingInformation()">shipping</button>
             </div>
+            <div id="boxOpenShippings"></div>
             <div>
                 <table>
                     <h2>Shipping Adress</h2>
@@ -37,12 +39,6 @@
                         <td id="shippingAddressCompany"></td>
                     </tr>
                 </table>
-
-<!--                 <p id="shippingAddressPostCode">Shipping Adress PostCode:</p>
-                <p id="shippingAddressStreet">Shipping Adress Street:</p>
-                <p id="shippingAddressStreetNr">Shipping Adress Street Nr.:</p>
-                <p id="shippingAddressName">Shipping Adress Name:</p>
- -->            
             </div>
         </div>
 
